--- a/index.html
+++ b/index.html
@@ -10,6 +10,59 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <main class="main">
+            <div class="cards">
+                <div class="card">
+                    <div class="card__image">
+                        <img src="img/2898bf4ec43b7ec3c43b1b8d7cfd8dba.jpg" alt="">
+                    </div>
+
+                    <div class="card__body">
+                        <h3 class="card__title">Lorem ipsum dolor sit.</h3>
+                        <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorum
+                            similique
+                            deleniti nemo voluptas fuga asperiores debitis ex incidunt consequuntur.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__image">
+                        <img src="img/zyakostava.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <h3 class="card__title">Lorem ipsum dolor sit.</h3>
+                        <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorum
+                            similique
+                            deleniti nemo voluptas fuga asperiores debitis ex incidunt consequuntur.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__image">
+                        <img src="img/Без названия.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <h3 class="card__title">Lorem ipsum dolor sit.</h3>
+                        <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorum
+                            similique
+                            deleniti nemo voluptas fuga asperiores debitis ex incidunt consequuntur.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image">
+                        <img src="img/zyakostava.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <h3 class="card__title">Lorem ipsum dolor sit.</h3>
+                        <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorum
+                            similique
+                            deleniti nemo voluptas fuga asperiores debitis ex incidunt consequuntur.</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 
 </body>
 
