--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <div class="wrapper">
+        <header class="header">
+            <div class="container"></div>
+        </header>
         <main class="main">
             <div class="cards">
                 <div class="card">
@@ -38,7 +41,7 @@
                     </div>
                 </div>
 
-
+                <footer class="footer"></footer>
             </div>
         </main>
     </div>
