--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     </div>
                 </div>
             </div>
+            <footer class="footer">
+                <div class="container__footer"></div>
+            </footer>
         </main>
     </div>
 
